homelab/apps/minecraft/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: minecraft-server
        image: itzg/minecraft-server:java21
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1.5Gi
        ports:
          - name: minecraft
            containerPort: 25565
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minecraft-pvc
