homelab/apps/minecraft/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  minecraft-server
spec:
  ports:
  - port: 25565
