homelab/apps/minecraft/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-server
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "minecraft-server"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-server
            port:
              number: 25565
